--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,visualstudiocode,linux,windows,macos
+.vscode/launch.json
+.vscode/settings.json
