--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,75 +1,26 @@
 services:
-  mysql8:
-    container_name: mysql8
-    image: mysql:8.0.40
-    ports:
-      - "3307:3306"
-    restart: always
-    networks:
-      - springcloud
-    environment:
-    # SE PUEDE PONER CON '=' O CON ':' PERO CON DOS PUNTOS ES SIN EL '-' Y NO SE PUEDE MEZCLAR
-      MYSQL_DATABASE: db_springboot_cloud
-      MYSQL_ROOT_PASSWORD: sasa1234
-  config-server:
-    container_name: config-server
-    image: config-server:v1
-    ports:
-      - "8888:8888"
-    restart: always
-    networks:
-      - springcloud
+  # mysql8:
+  #   container_name: mysql8
+  #   image: mysql:8.0.40
+  #   ports:
+  #     - "3307:3306"
+  #   restart: always
+  #   networks:
+  #     - springcloud
+  #   environment:
+  #     MYSQL_DATABASE: db_springboot_cloud
+  #     MYSQL_ROOT_PASSWORD: sasa1234
   eureka-server:
     container_name: eureka-server
-    image: eureka-server:v1
+    image: malopezl/eureka:latest
     ports:
       - "8761:8761"
     restart: always
     networks:
       - springcloud
-  zipkin-server:
-    container_name: zipkin-server
-    image: zipkin-server:v1
-    ports:
-      - "9411:9411"
-    restart: always
-    networks:
-      - springcloud
-    environment:
-      - STORAGE_TYPE=mysql
-      - MYSQL_USER=zipkin
-      - MYSQL_PASS=zipkin
-      - MYSQL_HOST=mysql8
-    depends_on:
-      - mysql8
-  msvc-users:
-    container_name: msvc-users
-    image: msvc-users:v1
-    restart: always
-    networks:
-      - springcloud
-    depends_on:
-      - mysql8
-      - eureka-server
-      - zipkin-server
-  msvc-oauth:
-    container_name: msvc-oauth
-    image: msvc-oauth:v1
-    ports:
-      - "9100:9100"
-    restart: always
-    networks:
-      - springcloud
-    depends_on:
-      - eureka-server
-      - zipkin-server
-      - msvc-users
   msvc-products:
-    # NO SE LE AGREGA NOMBRE PORQUE AL ESCALARLO NECESITA GENERARLE NOMBRES RANDOM
-    # container_name: msvc-products
-    image: msvc-products:v1
+    image: malopezl/products:latest
     deploy:
-      # ESTA CONFIGURACION ES PARA EL NUMERO DE INSTANCIAS QUE VA A CREAR
       replicas: 2
     restart: always
     networks:
@@ -77,39 +28,17 @@ services:
     depends_on:
       - mysql8
       - eureka-server
-      - zipkin-server
   msvc-items:
     container_name: msvc-items
-    image: msvc-items:v1
+    image: malopezl/items:latest
     ports:
-      - "8002:8002"
       - "8005:8005"
-      - "8007:8007"
     restart: always
     networks:
       - springcloud
     depends_on:
       - eureka-server
-      - zipkin-server
-      - config-server
       - msvc-products
-  gateway-server:
-    container_name: gateway-server
-    image: gateway-server:v1
-    ports:
-      - "8090:8090"
-    restart: always
-    networks:
-      - springcloud
-    environment:
-      - IP_ADDR=http://192.168.1.179:9100
-    depends_on:
-      - eureka-server
-      - zipkin-server
-      - msvc-products
-      - msvc-items
-      - msvc-users
-      - msvc-oauth
 
 networks:
   springcloud:
