--- a/msvc-items/src/main/resources/application.properties
+++ b/msvc-items/src/main/resources/application.properties
@@ -1,26 +1,8 @@
 spring.application.name=msvc-items
-server.port=8002
+server.port=8005
 
-# Esto al utilizar eureka ya no se utiliza.
-# spring.cloud.discovery.client.simple.instances.msvc-products[0].uri=http://localhost:8001
-# spring.cloud.discovery.client.simple.instances.msvc-products[1].uri=http://localhost:9001
+configuracion.texto=Configurando ambiente por defecto
 
 config.baseurl.endpoint.msvc-products=http://msvc-products
 
-# eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
-
-management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
-
-# CONFIGURACIONES CIRCUITBREAKER
-# resilience4j.circuitbreaker.configs.defecto.sliding-window-size=6
-# resilience4j.circuitbreaker.configs.defecto.failure-rate-threshold=50
-# resilience4j.circuitbreaker.configs.defecto.wait-duration-in-open-state=20s
-# resilience4j.circuitbreaker.configs.defecto.permitted-number-of-calls-in-half-open-state=4
-# resilience4j.circuitbreaker.configs.defecto.slow-call-rate-threshold=50
-# resilience4j.circuitbreaker.configs.defecto.slow-call-duration-threshold=2s
-# resilience4j.circuitbreaker.instances.items.base-config=defecto
-    
-# resilience4j.timelimiter.configs.defecto.timeout-duration=2s
-# resilience4j.timelimiter.instances.items.base-config=defecto
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://eureka-server:8761/eureka}
