--- a/msvc-products/src/main/resources/application.properties
+++ b/msvc-products/src/main/resources/application.properties
@@ -1,21 +1,11 @@
 spring.application.name=msvc-products
-# server.port=8001
-#Para generar autoescalado con eureka se utiliza esta configuracion
 server.port=${PORT:0}
 eureka.instance.instance-id=${spring.cloud.client.hostname}:${spring.application.name}:${random.value}
 
-# spring.datasource.url=jdbc:mariadb://localhost:3306/db_springboot_cloud
-# spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-
-spring.datasource.url=jdbc:mysql://mysql8:3306/db_springboot_cloud
-spring.datasource.username=root
-spring.datasource.password=sasa1234
+spring.datasource.url=jdbc:mysql://${MYSQL_URL:mysql8:3306}/db_springboot_cloud
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:sasa1234}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 
-# eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
-
-#Configuracion para trazas
-management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://zipkin-server:9411/api/v2/spans
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://eureka-server:8761/eureka}
