--- a/eureka-server/Dockerfile
+++ b/eureka-server/Dockerfile
@@ -1,3 +1,5 @@
+# Esta linea sirve por si la imagen se genera desde una MacOS la imagen se genera en arm64 y no amd64
+# FROM --platform=linux/amd64 amazoncorretto:21-alpine-jdk
 FROM amazoncorretto:21-alpine-jdk
 
 WORKDIR /app
